deploy/k8s/platform/ingress/api-gateway-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: urfu-dev
spec:
  ingressClassName: nginx
  rules:
    - host: api.dev.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
