deploy/k8s/platform/ingress/frontend-web-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-web
  namespace: urfu-dev
spec:
  ingressClassName: nginx
  rules:
    - host: app.dev.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-web
                port:
                  number: 8080
