deploy/k8s/platform/ingress/frontend-web-oauth2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-web-oauth2
  namespace: urfu-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - urfu-link.ghjc.ru
      secretName: urfu-link-ghjc-ru-tls
  rules:
    - host: urfu-link.ghjc.ru
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: frontend-web-oauth2-proxy
                port:
                  number: 4180
