deploy/k8s/platform/ingress/linkerd-viz-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-viz-dashboard
  namespace: linkerd-viz
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/auth-url: "https://linkerd.ghjc.ru/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://linkerd.ghjc.ru/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkerd.ghjc.ru
      secretName: linkerd-viz-tls
  rules:
    - host: linkerd.ghjc.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8084
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkerd-viz-oauth2
  namespace: linkerd-viz
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkerd.ghjc.ru
      secretName: linkerd-viz-tls
  rules:
    - host: linkerd.ghjc.ru
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
